--- a/style.css
+++ b/style.css
@@ -24,3 +24,11 @@ h3{
     text-transform: none;
     letter-spacing: 0.01em;
 }
+button{
+    text-align: center;
+    font: 900 1em "Raleway",sans-serif;
+    color: rgba(0, 0, 0, .5);
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    margin: 20px;
+}
